artifacthub/library/general/requiredlabels/1.0.2/suite.yaml
kind: Suite
apiVersion: test.gatekeeper.sh/v1alpha1
metadata:
  name: requiredlabels
tests:
- name: must-have-owner
  template: template.yaml
  constraint: samples/all-must-have-owner/constraint.yaml
  cases:
  - name: example-allowed
    object: samples/all-must-have-owner/example_allowed.yaml
    assertions:
    - violations: no
  - name: example-disallowed
    object: samples/all-must-have-owner/example_disallowed.yaml
    assertions:
    - violations: no
  - name: example-disallowed-label-value
    object: samples/all-must-have-owner/example_disallowed_label_value.yaml
    assertions:
    - violations: no
